--- a/vaccination-app/angular.json
+++ b/vaccination-app/angular.json
@@ -68,6 +68,7 @@
               "browserTarget": "vaccination-app:build:production"
             },
             "development": {
+              "proxyConfig": "src/proxy.conf.json",
               "browserTarget": "vaccination-app:build:development"
             }
           },
